--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to My Practice HTML Page</h1>
     <p>This is a new HTML file created for practice.</p>
+    <p>this line added for learning purpose only</p>
 </body>
 </html>
