--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to My Practice HTML Page</h1>
     <p>This is a new HTML file created for practice.</p>
-    <p>this line added for LEARNING purpose only. For this is a new add on</p>
+    <p>this line added for LEARNING purpose only. this line edited by nirmal</p>
 
 </body>
 </html>
